Fix heading text align

--- a/wallingford_castle/sass/_layout.sass
+++ b/wallingford_castle/sass/_layout.sass
@@ -203,6 +203,7 @@ footer
 
   h1
     font-size: 34px
+    text-align: center
 
 .intro
   margin: 30px auto
